# Timer

./: CMakeLists.txt  README.md  main.cpp  tests.cpp  timer.cpp  timer.hpp
Timer/: CMakeLists.txt
Timer/include/: CVSingleRunnerStrategy.hpp  FunctionInfo.hpp  IRunnerStrategy.hpp  ITimer.hpp  RecurringRunnerStrategy.hpp  RunnerStrategy.hpp  SimpleTimer.hpp  SimpleTimerFactory.hpp  SingleRunnerStrategy.hpp  TimerAbstractFactory.hpp  functionInfo.hpp  recurringRunnerStrategy.hpp  singleRunnerStrategy.hpp  strategyUtils.hpp  timer.hpp  timerBuilder.hpp
Timer/src/: CVSingleRunnerStrategy.cpp  IRunnerStrategy.cpp  RecurringRunnerStrategy.cpp  RunnerStrategy.cpp  SimpleTimer.cpp  SimpleTimerFactory.cpp  SingleRunnerStrategy.cpp  recurringRunnerStrategy.cpp  singleRunnerStrategy.cpp  strategyUtils.cpp  timer.cpp  timerBuilder.cpp
mocks/: MockRunnerStrategy.hpp
